<resources>
    <!-- activity_main -->
    <string name="app_name">Calificaciones</string>
    <string name="txtAppName">Ubo</string> <!-- Ubo (de UNPA + boleta) -->
    <string name="txtLogin">Iniciar sesión</string> <!-- Ubo (de UNPA + boleta) -->
    <string name="txtHintEmail">Matrícula</string>
    <string name="txtHintContraseña">Contraseña</string>
    <!-- <string name="txtTestEmail">test01@gmail.com</string> -->
    <string name="txtTestEmail">21010019</string>
    <string name="txtTestContr">123456789</string>
    <string name="btnLogin">Iniciar sesión</string>
    <string name="txtOr">ó</string>
    <string name="txtCrear">Crear cuenta</string>

    <!-- activity_registrar -->
    <string name="txtRegistrar">Registrate</string>
    <string name="txtHintMatricula">Matricula</string>
    <string name="txtHintNombre">Nombre (s)</string>
    <string name="txtHintApellidoPat">Apellido paterno</string>
    <string name="txtHintApellidoMat">Apellido materno</string>
     <string name="txtHintEmail2">Email</string>
    <!--<string name="txtHintContraseña">Contraseña</string> -->
    <string name="btnCrear">Continuar</string>
    <string name="btnCancelar">Cancelar</string>

    <!-- activity_bienvenida -->
    <string name="txtBienvenida">Bienvenido</string>
    <string name="txtNombre">Nombre</string>
    <string name="txtCerrarSesion">Cerrar Sesión</string>

    <!-- activity_home -->
    <string name="txtUni">Universidad del Papaloapan</string>
    <string name="txtCampus">CAMPUS LOMA BONITA CLAVE:20MSU0020Q</string>

    <string name="txtClave">CLAVE:20MSU0020Q</string>
    <string name="txtBoleta">Ciclo:</string>
    <string name="txtPeriodo">Periodo</string>
    <string name="txtSemestre">Semestre</string>

    <!--activity_profile-->

    <string name="btnCerrarSesion">Cerrar sesión</string>


</resources>