<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="84dp"
        android:layout_height="83dp"
        app:srcCompat="@drawable/unpa2"
        tools:layout_editor_absoluteX="7dp"
        tools:layout_editor_absoluteY="27dp"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/txtUni"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtUni"
        android:textAlignment="center"
        android:textColor="#0D0D0D"
        android:textSize="24dp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="101dp"
        tools:layout_editor_absoluteY="27dp" />

    <TextView
        android:id="@+id/txtCampus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtCampus"
        tools:layout_editor_absoluteX="160dp"
        tools:layout_editor_absoluteY="72dp" />

    <TextView
        android:id="@+id/txtClave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtClave"
        tools:layout_editor_absoluteX="170dp"
        tools:layout_editor_absoluteY="108dp" />

    <TextView
        android:id="@+id/txtBoleta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtBoleta"
        android:textColor="#0D0D0D"
        android:textSize="30dp"
        android:textStyle="bold|italic"
        tools:layout_editor_absoluteX="58dp"
        tools:layout_editor_absoluteY="159dp" />

    <ScrollView
        android:id="@+id/scrollBoleta"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/txtBoleta"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="16dp">

        <LinearLayout
            android:id="@+id/contenedor_boleta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="#eaf5e1"
            android:padding="16dp"
            android:elevation="4dp">

            <LinearLayout
                android:id="@+id/layoutDatosAlumno"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="20dp">


                <TextView
                    android:id="@+id/txtMatricula"
                    android:layout_width="132dp"
                    android:layout_height="wrap_content"
                    android:text="Matricula:" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="133dp"
                    android:layout_height="wrap_content"
                    android:text="Nombre:" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="132dp"
                    android:layout_height="wrap_content"
                    android:text="Carrera:" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="133dp"
                    android:layout_height="wrap_content"
                    android:text="Semestre:" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Periodo: Semestre"
                    android:textStyle="bold"/>

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/textView6"
                            android:layout_width="wrap_content"
                            android:layout_height="30dp"
                            android:background="@drawable/border"
                            android:text="Asignaturas"
                            android:textAlignment="center"
                            android:textStyle="italic" />

                        <TextView
                            android:id="@+id/textView7"
                            android:layout_width="38dp"
                            android:layout_height="30dp"
                            android:background="@drawable/border"
                            android:text="1P"
                            android:textAlignment="center" />

                        <TextView
                            android:id="@+id/textView8"
                            android:layout_width="40dp"
                            android:layout_height="30dp"
                            android:background="@drawable/border"
                            android:text="2P"
                            android:textAlignment="center" />

                        <TextView
                            android:id="@+id/textView9"
                            android:layout_width="38dp"
                            android:layout_height="30dp"
                            android:background="@drawable/border"
                            android:text="3P"
                            android:textAlignment="center" />

                        <TextView
                            android:id="@+id/textView11"
                            android:layout_width="38dp"
                            android:layout_height="30dp"
                            android:background="@drawable/border"
                            android:text="PP"
                            android:textAlignment="center" />

                        <TextView
                            android:id="@+id/textView10"
                            android:layout_width="38dp"
                            android:layout_height="30dp"
                            android:background="@drawable/border"
                            android:text="O"
                            android:textAlignment="center" />

                        <TextView
                            android:id="@+id/textView12"
                            android:layout_width="38dp"
                            android:layout_height="30dp"
                            android:background="@drawable/border"
                            android:text="PF"
                            android:textAlignment="center" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:backgroundTint="#2196F3">

                        <TextView
                            android:id="@+id/textView13"
                            android:layout_width="wrap_content"
                            android:layout_height="30dp"
                            android:background="@drawable/border"
                            android:text=""
                            android:textAlignment="center" />

                        <TextView
                            android:id="@+id/textView14"
                            android:layout_width="38dp"
                            android:layout_height="30dp"
                            android:background="@drawable/border"
                            android:text=""
                            android:textAlignment="center" />

                        <TextView
                            android:id="@+id/textView15"
                            android:layout_width="38dp"
                            android:layout_height="30dp"
                            android:background="@drawable/border"
                            android:text=""
                            android:textAlignment="center" />

                        <TextView
                            android:id="@+id/textView16"
                            android:layout_width="38dp"
                            android:layout_height="30dp"
                            android:background="@drawable/border"
                            android:text=""
                            android:textAlignment="center" />

                        <TextView
                            android:id="@+id/textView17"
                            android:layout_width="38dp"
                            android:layout_height="30dp"
                            android:background="@drawable/border"
                            android:text=""
                            android:textAlignment="center" />

                        <TextView
                            android:id="@+id/textView18"
                            android:layout_width="38dp"
                            android:layout_height="30dp"
                            android:background="@drawable/border"
                            android:text=""
                            android:textAlignment="center" />

                        <TextView
                            android:id="@+id/textView19"
                            android:layout_width="38dp"
                            android:layout_height="30dp"
                            android:background="@drawable/border"
                            android:text=""
                            android:textAlignment="center" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" >

                        <TextView
                            android:id="@+id/textView20"
                            android:layout_width="wrap_content"
                            android:layout_height="30dp"
                            android:background="@drawable/border"
                            android:text=""
                            android:textAlignment="center" />

                        <TextView
                            android:id="@+id/textView21"
                            android:layout_width="38dp"
                            android:layout_height="30dp"
                            android:background="@drawable/border"
                            android:text=""
                            android:textAlignment="center" />

                        <TextView
                            android:id="@+id/textView22"
                            android:layout_width="38dp"
                            android:layout_height="30dp"
                            android:background="@drawable/border"
                            android:text=""
                            android:textAlignment="center" />

                        <TextView
                            android:id="@+id/textView23"
                            android:layout_width="38dp"
                            android:layout_height="30dp"
                            android:background="@drawable/border"
                            android:text=""
                            android:textAlignment="center" />

                        <TextView
                            android:id="@+id/textView24"
                            android:layout_width="38dp"
                            android:layout_height="30dp"
                            android:background="@drawable/border"
                            android:text=""
                            android:textAlignment="center" />

                        <TextView
                            android:id="@+id/textView25"
                            android:layout_width="38dp"
                            android:layout_height="30dp"
                            android:background="@drawable/border"
                            android:text=""
                            android:textAlignment="center" />

                        <TextView
                            android:id="@+id/textView26"
                            android:layout_width="38dp"
                            android:layout_height="30dp"
                            android:background="@drawable/border"
                            android:text=""
                            android:textAlignment="center" />

                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" >

                        <TextView
                            android:id="@+id/textView28"
                            android:layout_width="wrap_content"
                            android:layout_height="30dp"
                            android:background="@drawable/border"
                            android:text=""
                            android:textAlignment="center" />

                        <TextView
                            android:id="@+id/textView29"
                            android:layout_width="38dp"
                            android:layout_height="30dp"
                            android:background="@drawable/border"
                            android:text=""
                            android:textAlignment="center" />

                        <TextView
                            android:id="@+id/textView30"
                            android:layout_width="38dp"
                            android:layout_height="30dp"
                            android:background="@drawable/border"
                            android:text=""
                            android:textAlignment="center" />

                        <TextView
                            android:id="@+id/textView31"
                            android:layout_width="38dp"
                            android:layout_height="30dp"
                            android:background="@drawable/border"
                            android:text=""
                            android:textAlignment="center" />

                        <TextView
                            android:id="@+id/textView32"
                            android:layout_width="38dp"
                            android:layout_height="30dp"
                            android:background="@drawable/border"
                            android:text=""
                            android:textAlignment="center" />

                        <TextView
                            android:id="@+id/textView33"
                            android:layout_width="38dp"
                            android:layout_height="30dp"
                            android:background="@drawable/border"
                            android:text=""
                            android:textAlignment="center" />

                        <TextView
                            android:id="@+id/textView34"
                            android:layout_width="38dp"
                            android:layout_height="30dp"
                            android:background="@drawable/border"
                            android:text=""
                            android:textAlignment="center" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" >

                        <TextView
                            android:id="@+id/textView35"
                            android:layout_width="wrap_content"
                            android:layout_height="30dp"
                            android:background="@drawable/border"
                            android:text=""
                            android:textAlignment="center" />

                        <TextView
                            android:id="@+id/textView36"
                            android:layout_width="38dp"
                            android:layout_height="30dp"
                            android:background="@drawable/border"
                            android:text=""
                            android:textAlignment="center" />

                        <TextView
                            android:id="@+id/textView37"
                            android:layout_width="38dp"
                            android:layout_height="30dp"
                            android:background="@drawable/border"
                            android:text=""
                            android:textAlignment="center" />

                        <TextView
                            android:id="@+id/textView38"
                            android:layout_width="38dp"
                            android:layout_height="30dp"
                            android:background="@drawable/border"
                            android:text=""
                            android:textAlignment="center" />

                        <TextView
                            android:id="@+id/textView39"
                            android:layout_width="38dp"
                            android:layout_height="30dp"
                            android:background="@drawable/border"
                            android:text=""
                            android:textAlignment="center" />

                        <TextView
                            android:id="@+id/textView41"
                            android:layout_width="39dp"
                            android:layout_height="30dp"
                            android:background="@drawable/border"
                            android:text=""
                            android:textAlignment="center" />

                        <TextView
                            android:id="@+id/textView40"
                            android:layout_width="38dp"
                            android:layout_height="30dp"
                            android:background="@drawable/border"
                            android:text=""
                            android:textAlignment="center" />
                    </TableRow>
                </TableLayout>


            </LinearLayout>
        </LinearLayout>




    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>